# Graph-play

10_LinkPrediction/: 10_LinkPrediction.ipynb
11_GraphGeneration/: 11_GraphGeneration.ipynb
12_heterogeneous/: .gitignore  12_heterogeneous.ipynb
13_TGNN/: 13_TGNN.ipynb
14_Explainer/: 14_Explainer.ipynb
15_Traffic/: 15_traffic.ipynb
16_hetero_utilize/: .gitignore  16_hetero_utilize.ipynb
2_Graph_Theory/: Graph_Theory.ipynb
4_Node2Vec/: Node2Vec.ipynb
5_GNN/: 5_GNN.ipynb
6_GCN/: 6_GCN.ipynb
7_GAT/: 7_GAT.ipynb
8_GraphSAGE/: 8_GraphSAGE.ipynb
9_GIN/: 9_GIN.ipynb
KG-toy/: README.md  pyproject.toml
KG-toy/data/: triple.csv
KG-toy/docs/: kg_graph.html
KG-toy/src/: build_kg.py  query_kg.py  visualize_kg.py
KG-toy/src/kg_toy/: __init__.py
